<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- 双击退出程序 -->
    <string name="press_back_again_to_exit">再按一次退出程序</string>

    <!-- NFC相关 -->
    <string name="nfc__tag_empty">当前标签未绑定产品SN</string>

    <!-- 域名配置 -->
    <string name="base_domain_config">域名配置</string>
    <string name="base_domain_config__input_invitation_code">请输入邀请码</string>
    <string name="base_domain_config__invitation_code">邀请码</string>
    <string name="base_domain_config__submit">提交</string>
    <string name="base_domain_config__invitation_code_invalid">邀请码无效</string>

    <!-- 版本更新 -->
    <string name="upgrade__downloading">下载中…</string>
    <string name="upgrade__cancel">暂不更新</string>
    <string name="upgrade__start">开始</string>
    <string name="upgrade__download_fail">下载失败：%1$s</string>

    <!-- 选择条码 -->
    <string name="select_barcode">选择条码</string>
    <string name="select_barcode__select_all">全选</string>
    <string name="select_barcode__print">打印</string>
    <string name="select_barcode__barcode">条码</string>
    <string name="select_barcode__copies">份数</string>
    <string name="select_barcode__unselected_barcode">未选中任何条码，无法打印</string>
    <string name="select_barcode__miss_copies">条码【%1$s】未填写打印份数</string>

    <!-- 便携式打印 -->
    <string name="print">打印</string>
    <string name="print__title">条码明细</string>
    <string name="print__code">编码</string>
    <string name="print__name">名称</string>
    <string name="print__barcode">条码</string>
    <string name="print__status">状态</string>
    <string name="print__printed">已打印</string>
    <string name="print__unprinted">未打印</string>
    <string name="print__connect_printer_and_print">连接打印机并打印</string>
    <string name="print__template_not_found">未查询到打印模板</string>
    <string name="print__printing">打印中</string>
    <string name="print__printer_exception">打印机状态异常，请重新连接打印机</string>
    <string name="print__print_successful">打印成功！</string>
    <string name="print__print_fail">打印失败，请重试</string>

    <!-- 打印配置 -->
    <string name="print_config__title">打印配置</string>
    <string name="print_config__brand">打印机型号</string>
    <string name="print_config__brand_hint">请选择打印机型号</string>
    <string name="print_config__template">打印模板</string>
    <string name="print_config__template_hint">请选择打印模板</string>
    <string name="print_config__printer">打印机</string>
    <string name="print_config__printer_hint">请连接打印机</string>
    <string name="print_config__disconnect">断开连接</string>
    <string name="print_config__copies">打印份数</string>
    <string name="print_config__copies_hint">请输入打印份数</string>
    <string name="print_config__direction">打印方向</string>
    <string name="print_config__direction_hint">请选择打印方向</string>
    <string name="print_config__horizontal">横向</string>
    <string name="print_config__vertical">纵向</string>
    <string name="print_config__cancel">取消</string>
    <string name="print_config__ok">打印</string>
    <string name="print_config__hcctg">L51</string> <!-- 华晨联创 -->
    <string name="print_config__hrpt">HM-A400</string> <!-- 汉印 -->
    <string name="print_config__ibowlder">PTM30-3524</string> <!-- 鹏研科技 -->

    <!-- 连接便携式打印机 -->
    <string name="connect_portable_printer">连接打印机</string>
    <string name="connect_portable_printer__bluetooth_not_supported">当前设备不支持蓝牙</string>
    <string name="connect_portable_printer__pairing">配对中，请稍后</string>
    <string name="connect_portable_printer__paired">已配对</string>
    <string name="connect_portable_printer__unpair">取消配对</string>
    <string name="connect_portable_printer__connecting">正在连接打印机，请稍后</string>
    <string name="connect_portable_printer__connect_successful">连接成功</string>
    <string name="connect_portable_printer__disconnect_success">连接已断开</string>
    <string name="connect_portable_printer__connect_fail">连接失败，请重试</string>

    <!-- 打印机状态 -->
    <string name="printer_status__unknown_error">打印机状态异常</string>
    <string name="printer_status__normal">打印机状态正常</string>
    <string name="printer_status__communication_error">打印机通信异常</string>
    <string name="printer_status__paper_out">打印机缺纸</string>
    <string name="printer_status__low_paper">打印机纸将尽</string>
    <string name="printer_status__cover_open">打印机开盖</string>

    <!-- 打印状态 -->
    <string name="printing_status__completed">打印完成</string>
    <string name="printing_status__unknown_error">未知异常</string>
    <string name="printing_status__in_progress">打印机正在打印中</string>
    <string name="printing_status__paper_out">打印机缺纸</string>
    <string name="printing_status__cover_open">纸舱盖开盖</string>
    <string name="printing_status__communication_failed">与打印机通信失败</string>
    <string name="printing_status__data_send_failed">数据发送失败，通信异常</string>
    <string name="printing_status__invalid_data_format">接收数据格式不正确</string>

    <!-- 二维码绑定NFC标签 -->
    <string name="qr_code_to_nfc">绑定NFC标签</string>
    <string name="qr_code_to_nfc__product_sn">产品sn：</string>
    <string name="qr_code_to_nfc__scan_qr_code_message">按压左右两侧任一黄色按钮进行扫描</string>
    <string name="qr_code_to_nfc__bind_message">请将NFC标签置于PDA背部上方扫描区域</string>
    <string name="qr_code_to_nfc__cancel">取消</string>
    <string name="qr_code_to_nfc__write_successful">标签写入成功</string>
    <string name="qr_code_to_nfc__write_fail">标签写入失败，请重试</string>
    <string name="qr_code_to_nfc__incorrect_barcode_type">条码类型错误，请扫描产品SN</string>

    <!-- 站内信 -->
    <string name="message_list">站内信</string>
    <string name="message_list__cancel">取消</string>
    <string name="message_list__ok">确定</string>
    <string name="message_list__mark_unread">标为未读</string>
    <string name="message_list__mark_unread_message">是否将消息标为未读？</string>
    <string name="message_list__mark_read">标为已读</string>
    <string name="message_list__mark_read_message">是否将消息标为已读？</string>
    <!-- 站内信详情 -->
    <string name="message_detail" />
    <string name="message_detail__create_time">发送时间：</string>
    <string name="message_detail__create_by">发送人：</string>
    <!-- 站内信工具类 -->
    <string name="message_util__title">授权提醒</string>
    <string name="message_util__message">程序需要您授予通知权限才能正常使用</string>
    <string name="message_util__cancel">取消</string>
    <string name="message_util__ok">确认</string>
</resources>