<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rouxinpai.arms.print.PrintActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- 标题栏 -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Primary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:elevation="0pt"
            app:layout_scrollFlags="scroll|enterAlways|snap"
            app:titleCentered="true"
            tools:viewBindingIgnore="true" />

        <!-- 表头 -->
        <LinearLayout
            android:id="@+id/llyt_header"
            android:layout_width="match_parent"
            android:layout_height="32dp"
            android:background="#FFF5F7FD"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/print__code"
                android:textColor="#FF333333"
                android:textSize="14sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/black30" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/print__name"
                android:textColor="#FF333333"
                android:textSize="14sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/black30" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:gravity="center"
                android:text="@string/print__barcode"
                android:textColor="#FF333333"
                android:textSize="14sp" />

            <View
                android:layout_width="1px"
                android:layout_height="match_parent"
                android:background="@color/black30" />

            <androidx.appcompat.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/print__status"
                android:textColor="#FF333333"
                android:textSize="14sp" />
        </LinearLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <!-- 明细 -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_print_data"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:itemCount="5"
        tools:listitem="@layout/print_recycle_item" />

    <!-- 打印 -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_print"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_marginHorizontal="32.5dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/shape_ff417bf4_4pt"
        android:minHeight="0dp"
        android:paddingVertical="10dp"
        android:text="@string/print"
        android:textColor="@color/white"
        android:textSize="16sp"
        tools:visibility="visible" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>