<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".nfc.QrCodeToNfcActivity">

    <include layout="@layout/include_toolbar" />

    <!-- 扫描二维码引导 -->
    <LinearLayout
        android:id="@+id/llyt_scan_barcode_guide"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <androidx.appcompat.widget.AppCompatImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/qr_code_to_nfc__ic_scan_qr_code" />

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/qr_code_to_nfc__scan_qr_code_message"
            android:textColor="#FF333333"
            android:textSize="16sp" />
    </LinearLayout>

    <!-- 条码信息 -->
    <LinearLayout
        android:id="@+id/llyt_barcode_info"
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/qr_code_to_nfc__ic_barcode_info"
        android:orientation="vertical"
        android:paddingHorizontal="18dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="30" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_product_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="产品编码产品编码产品编码产品编码产品编码" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_product_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="20sp"
            tools:text="产品名称产品名称产品名称产品名称产品名称产品名称产品名称" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="10" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/field_product_sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/qr_code_to_nfc__product_sn"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_product_sn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:textColor="@color/white"
            android:textSize="16sp"
            tools:text="182731247615754614" />

        <Space
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="24" />
    </LinearLayout>

    <!-- 扫描NFC引导 -->
    <LinearLayout
        android:id="@+id/llyt_scan_nfc_guide"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/llyt_image"
            android:layout_width="match_parent"
            android:layout_height="182dp"
            android:layout_marginHorizontal="17dp"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/tv_title">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/qr_code_to_nfc__ic_scan" />

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/qr_code_to_nfc__ic_pda" />
        </LinearLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/qr_code_to_nfc__bind_message"
            android:textColor="#FF333333"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/llyt_image" />
    </LinearLayout>

    <!-- 取消 -->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:backgroundTint="#FFF5F5F5"
        android:minHeight="0dp"
        android:paddingVertical="12dp"
        android:stateListAnimator="@null"
        android:text="@string/qr_code_to_nfc__cancel"
        android:textColor="#FF333333"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_message" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_bind_tag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="llyt_barcode_info, llyt_scan_nfc_guide, btn_cancel" />
</androidx.constraintlayout.widget.ConstraintLayout>